Major update to AnkiTools, focusing on creating an API and Excel sync.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: python
 python:
-#  - "2.7"
-  - "3.4"
   - "3.5"
   - "3.6"
-#  - "3.7-dev"
+  - "3.7"
 
 install:
-  - "pip install pipenv"
-  - "pipenv install --dev"
+  - "curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python"
+  - "poetry install"
 
 script:
-  - "python setup.py test"
   - "pytest"
