--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7"
+  - "3.7-dev"
 
 install:
   - "curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python"
