--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,11 @@ appdirs = "^1.4"
 openpyxl = "^2.5"
 psutil = "^5.4"
 pyexcel-xlsx = "^0.5.6"
+namedlist = "^1.7"
+simplejson = "^3.16"
+importlib-resources = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.6"
 python-dotenv = "^0.8.2"
+pytest-logger = "^0.3.0"
