--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,9 @@ python = ">=3.5"
 requests = "^2.19"
 bs4 = "^0.0.1"
 appdirs = "^1.4"
-openpyxl = "^2.5"
 psutil = "^5.4"
-pyexcel-xlsx = "^0.5.6"
+pyexcel-export = {path = "../pyexcel-export"}
+#pyexcel-export = "^0.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.6"
